2011-02-07 Javier Lanz <javier.lanz@artica.es>
	* godmode/gis_maps/index.php: Only display Default column to an admin
	user

2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* include/functions_custom_graphs.php
	godmode/reporting/graph_builder.main.php
	godmode/reporting/graphs.php: Only administrator users can select and see 
	group All in this views.
	
	Fix: #3183419, 3183421

2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

        * operation/agentes/estado_agente.php
        godmode/alerts/configure_alert_template.php
        godmode/alerts/alert_list.builder.php: Now users can see alerts and templates
        of their groups and group "All".

2011-02-17 Javier Lanz <javier.lanz@artica.es>
	* godmode/gis_maps/index.php: Show only user's GIS maps
	
	Fix: #3183432

2011-02-17  Ramon Novoa  <rnovoa@artica.es>

	* include/functions.php: Merged from trunk. Hide custom SQL reports
	  from non PM users when creating reports.

2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* operation/agentes/estado_agente.php: fixed the re-apply the safe_input in
	the search.
	
	Fixes: #3184647
	
	* include/functions_db.php: cleaned source code style.

2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* operation/visual_console/index.php: Correction for my last commit. Now in this 
	view users can see maps of group "All".

2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* godmode/reporting/visual_console_builder.editor.js: fixed the type of icon
	when create and after edit.

2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php: fixed the panel
	propierties for icon in the edition and creation, now it haven't label color
	and have preview icon and map link.
